<resources>
    <!--Названия активити-->
    <string name="app_name">Stopwatch</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activitiy_preferences">Preferences</string>
    <string name="title_activity_background_img">BackgroundImgActivity</string>

    <!--Пункты меню-->
    <string name="preferences_action">Настройки</string>
    <string name="chronometer_color_settings">Выбор цвета</string>
    <string name="menu_drop_counter_title">Сбросить</string>
    <string name="menu_start_counter_title">Запустить</string>
    <string name="menu_stop_counter_title">Остановить</string>
    <string name="menu_show_background_img_list">Фоны</string>

    <!--Остальное-->
    <string name="chronometer_notification_title">Chronometer</string>
    <string name="save_timer_set">Сохранить время</string>
    <string name="show_timer_sets">Показать сохраненное время</string>
    <string name="timer_notification_title">Timer</string>
    <string name="add_time_button_title">Добавить время</string>
    <string name="empty_time">00:00</string>
    <string name="timer_on_finish_title">Done</string>
    <string name="label_for_input_time">Время таймера (в секундах):</string>
    <string name="saved_timer_dialog_title">Таймеры</string>
    <string name="set_bckg_image_title">Установить изображение</string>

    <!-- Окно настроек-->
    <string name="pref_save_time_title">Сохранять отсечки таймера</string>
    <string name="pref_save_color_title">Применить цвет</string>
    <string name="pref_save_color_title_sum">Применять выбранный цвет фона при запуске
        приложения</string>
    <string name="pref_select_color_title">Выбрать цвет</string>
    <string name="pref_key_save_time">key_savetime</string>
    <string name="pref_key_save_color">key_savecolor</string>
    <string name="pref_key_select_color">key_selectcolor</string>
</resources>
