<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".StopwatchActivity">
    <item android:id="@+id/start_counter" android:title="@string/menu_start_counter_title"
        app:showAsAction="always" />
    <item android:id="@+id/drop_counter" android:title="@string/menu_drop_counter_title"
        app:showAsAction="never" />
    <item android:id="@+id/save_timer_set" android:title="@string/save_timer_set"
        app:showAsAction="ifRoom" android:visible="false" />
    <item android:id="@+id/show_timer_sets" android:title="@string/show_timer_sets"
        app:showAsAction="never" android:visible="false" />
    <item android:id="@+id/preferences" android:title="@string/preferences_action"
        app:showAsAction="never" />
    <item android:id="@+id/settings" android:title="@string/chronometer_color_settings"
        app:showAsAction="never" />
    <item android:id="@+id/background_img" android:title="@string/menu_show_background_img_list"
        app:showAsAction="never" />
</menu>
